Add enable preview to pom config